Fixing toast video preview overflow

--- a/prototype-2/prototype-2-video.css
+++ b/prototype-2/prototype-2-video.css
@@ -901,8 +901,10 @@ body:has(.T_M_G-video-floating-player) {
 }
 
 .T_M_G-video-playlist-next-video-preview-wrapper video {
-  width: 100%;
-  height: 100%;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
   border-radius: calc(var(--T_M_G-video-current-unit)/5);
 }
 
